--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!-- PORTFOLIO_13Jun2018 -->
+<!-- Portfolio _26Jun2018_  -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -7,245 +7,160 @@
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
 -->
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
-<title>Papaspyrou</title>
-<link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<head>
+<title>Papaspyrou Alexandros</title>
+<link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
-* {
-    box-sizing: border-box;
-}
-
-body {
-    background-color: #f1f1f1;
-    padding: 20px;
-    font-family: Arial;
-}
-
-/* Center website */
-.main {
-    max-width: 1000px;
-    margin: auto;
-}
-
-h1 {
-    font-size: 50px;
-    word-break: break-all;
-}
-
-.row {
-    margin: 10px -16px;
-}
-
-/* Add padding BETWEEN each column */
-.row,
-.row > .column {
-    padding: 8px;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-    float: left;
-    width: 33.33%;
-    display: none; /* Hide all elements by default */
-}
-
-/* Clear floats after rows */ 
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* Content */
-.content {
-    background-color: white;
-    padding: 10px;
-}
-
-/* The "show" class is added to the filtered elements */
-.show {
-  display: block;
-}
-
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  background-color: white;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #ddd;
-}
-
-.btn.active {
-  background-color: #666;
-  color: white;
-}
+html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 </style>
-</head>
 <body>
 
-<!-- MAIN (Center website) -->
-<div class="main">
+<!-- MAIN Section //////////////////////////////////////////////////////////-->
+<div class="w3-center w3-dark-grey w3-padding-16">
+  <h1 class="w3-jumbo"><b>Portfolio</b></h1>
+  <p>"Σχεδόν ό,τι κάνεις είναι ασήμαντο, αλλά είναι σημαντικό να το κάνεις."</p>
+  <br> <div class="w3-row-padding">
+<!-- 1 -->    
+<div class="w3-col l3 m6 w3-margin-bottom">
+  <div class="w3-display-container">
+    <div class="w3-display-topleft w3-red w3-padding">Electronics</div>
+    <div class="w3-display-bottomleft w3-black w3-padding" onclick="alrtFunction()" >
+    <i class="fa fa-info"></i></div> 
+	<script> function alrtFunction(){alert("Το κύκλωμα του Φωτοδιακόπτη\n\nΟ πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.\nΌταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.");}</script>
+    <div class="w3-display-bottomright w3-red w3-padding">
+      <a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><i class="fa fa-file-text-o"></i></a>
+      <a href="https://vimeo.com/141997888"><i class="fa fa-vimeo"></i></a>
+      <a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><i class="fa fa-code"></i></a>
+    </div>
+    <a href="https://alexandroshub.github.io/proj_code.html">
+    <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="olt" style="width:100%"></a>
+  </div>  
+</div>
+<!-- 2 --> 
+<div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
+<a href="https://alexandroshub.github.io/proj_elec.html">
+<div class="w3-display-topleft w3-black w3-padding">Developing & Code  & IoT</div>
+<img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" alt="IoT" style="width:100%"></a>
+<div class="w3-display-bottomleft w3-black w3-padding" onclick="al2tFunction()" >
+    <i class="fa fa-info"></i></div>
+	<script> function al2tFunction(){alert("22Hello! I am an alert box!");}</script>
+</div></div>
+<!-- 3 -->     
+<div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
+<a href="https://alexandroshub.github.io/proj_auto.html">
+<div class="w3-display-topleft w3-black w3-padding">Automations & Robotics</div>
+<img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Michatron" style="width:100%"></a></div></div>
+<!-- 4 --> 
+<div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
+<a href="https://alexandroshub.github.io/proj_files.html">
+<div class="w3-display-topleft w3-white w3-padding">
+Files & Publications</div>
+<img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Files" style="width:100%">
+</a></div></div>
+</div>
+</div><!-- ////////////////////////////////////////////////////////// -->
 
-<h2><a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a> PORTFOLIO</h2>
+<!--BLOG Section ////////////////////////////////////////////////////////// -->
+<div class="w3-center w3-grey w3-padding-16">
+<h1 class="w3-jumbo"><b>Blog</b></h1>
+<iframe src="https://robodayblog.wordpress.com" height="400" width="75%"></iframe></div><!-- ////////////////////////////////////////////////////////// -->
 
-<div id="myBtnContainer">
-  <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-  <button class="btn" onclick="filterSelection('nature')"> Electronics & IoT</button>
-  <button class="btn" onclick="filterSelection('cars')"> Developing & Code</button>
-  <button class="btn" onclick="filterSelection('people')"> Automations & Robotics</button>
-  <button class="btn" onclick="filterSelection('pub')"> Files & Publications</button>
+<!--NUM Section ////////////////////////////////////////////////////////// -->
+<div class="w3-row w3-center w3-dark-grey w3-padding-16">
+  <div class="w3-quarter w3-section"><span class="w3-xlarge">
+  <i class="fa fa-code w3-margin-bottom w3-jumbo w3-center"></i>
+  <br>14+</span><br>Partners</div>
+  <div class="w3-quarter w3-section"><span class="w3-xlarge">
+  <i class="fa fa-folder-open-o w3-margin-bottom w3-jumbo"></i>
+  <br>55+</span><br>Projects Done</div>
+  <div class="w3-quarter w3-section"><span class="w3-xlarge">
+  <i class="fa fa-paper-plane-o w3-margin-bottom w3-jumbo"></i>
+  <br>89+</span><br>Happy Clients</div>
+  <div class="w3-quarter w3-section"><span class="w3-xlarge">
+  <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i>
+  <br>150+</span><br>Meetings</div>
+</div><!-- ////////////////////////////////////////////////////////// -->
+
+<!--ALL Section ////////////////////////////////////////////////////////// -->
+<div class="w3-row w3-container">
+
+<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Αρχείο</span></div>
+
+<div class="w3-col l3 m6 w3-light-grey w3-container w3-padding-16">   <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i>
+<h3>Αρχείο</h3>
+<p>Το κύκλωμα του Φωτοδιακόπτη
+<a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a>
+<br>Μελέτη και Κατασκευή Μichatron
+<a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><i class="fa fa-file-text-o"></i></a>
+<a href="https://vimeo.com/141997888"><i class="fa fa-vimeo"></i></a>
+<a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><i class="fa fa-code"></i></a></p>
 </div>
 
-<!-- Portfolio Gallery Grid -->
-<div class="row">
-  <div class="column nature">
-    <div class="content">
-      <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" alt="CoNo" style="width:100%">
-      <h4>CoNo</h4>
-      <p>soon..</p>
-      <i class="fa fa-youtube-play"></i>
-      <i class="fa fa-vimeo"></i>
-      <i class="fa fa-dropbox"></i>
-    </div>
-  </div>
-  <div class="column nature">
-    <div class="content">
-    <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="Lights" style="width:100%">
-      <h4>Το κύκλωμα του Φωτοδιακόπτη</h4>
-   
- <a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
-    </div>
-  </div>
-  
-  
-  <div class="column cars">
-    <div class="content">
-      <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
-      <h4>Παιχνίδι σε VisualBasic για PC</h4>
-      <p> (χωρίς εγκατάσταση)</p> 
-      <a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
-<a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
-<a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
-<a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><button class="btn active"><i class="fa fa-code"></i></button></a>
-    </div>
-  </div>
-
-  <div class="column people">
-    <div class="content">
-      <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
-      <h4>Μελέτη και Κατασκευή Μichatron</h4>
-      <p>.</p>
-      <a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><button class="btn active"><i class="fa fa-file-text-o"></i></button></a>
-      <a href="https://vimeo.com/141997888"><button class="btn active"><i class="fa fa-vimeo"></i></button></a>
-      <a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><button class="btn active"><i class="fa fa-code"></i></button></a>
-    </div>
-  </div>
-  
-  <div class="column pub">
-    <div class="content">
-    <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Pub" style="width:100%">
-      <h4>Η εξέλιξη των Η/Υ</h4>
-      <p>(από τον άβακα στο Tablet)
-Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.<meta name="viewport" content="width=device-width, initial-scale=1">
-</p>
+<div class="w3-col l3 m6 w3-grey w3-container w3-padding-16"><i class="fa fa-code w3-margin-bottom w3-jumbo w3-center"></i><h3>Αρχείο</h3>
+<p>Παιχνίδι σε VisualBasic για PC
+<a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a>
+<a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a>
+<a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a>
+<a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></p>
+</div>
+            
+<div class="w3-col l3 m6 w3-dark-grey w3-container w3-padding-16"><i class="fa fa-paper-plane-o w3-margin-bottom w3-jumbo"></i><h3>Αρχείο</h3>
+<p><b>“ Η εξέλιξη των Η/Υ ”</b> (από τον άβακα στο Tablet) Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.
 <a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp
-"><button class="btn active"><i class="fa fa-file-text-o"></i></button></a>
-<a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><button class="btn active"><i class="fa fa-slideshare"></i></button></a>
-
-    </div>
-  </div>
-  <div class="column pub">
-    <div class="content">
-    <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Pub" style="width:100%">
-      <h4>MPPT</h4>
-      <p>“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet)
-Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.</p> 
-<a href="https://issuu.com/a-papaspyrou/docs/mppt_final"><button class="btn active"><i class="fa fa-file-text-o"></i></button></a>
-<a href="https://www.slideshare.net/alexandrospapaspurou/mppt-30080120"><button class="btn active"><i class="fa fa-slideshare"></i></button></a>
-    </div>
-  </div>
-  
-    <div class="column pub">
-    <div class="content">
-    <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Pub" style="width:100%">
-      <h4>Αρχείο</h4>
-      <p>με τις εργασίες μου</p> 
-<a href="https://www.dropbox.com/sh/y7j320ldle8678d/AABMt-dGKjWB1ty2JnuflvcUa?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
-<a href="https://www.dropbox.com/sh/63m0fmvfn96rwd5/AAA3YfooM9GAUJk_eMntRQjga?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
-<a href="https://www.dropbox.com/sh/a17b3xchllgy4j9/AAA4G9X0O5gAYg0MqqYIc8qva?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
-    </div>
-  </div>
-<!-- END GRID -->
+"><i class="fa fa-file-text-o"></i></a>
+<a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-slideshare"></i></a>
+<br><b>MPPT </b>     
+<a href="https://issuu.com/a-papaspyrou/docs/mppt_final"><i class="fa fa-file-text-o"></i></a>
+<a href="https://www.slideshare.net/alexandrospapaspurou/mppt-30080120"><i class="fa fa-slideshare"></i></a></p>
+</div>
+      
+<div class="w3-col l3 m6 w3-black w3-container w3-padding-16"><i class="fa fa-folder-open-o w3-margin-bottom w3-jumbo"></i><h3>Αρχείο</h3>
+<p>Αρχείο με τις εργασίες μου
+<a href="https://www.dropbox.com/sh/y7j320ldle8678d/AABMt-dGKjWB1ty2JnuflvcUa?dl=0"><i class="fa fa-dropbox"></i></a>
+<a href="https://www.dropbox.com/sh/63m0fmvfn96rwd5/AAA3YfooM9GAUJk_eMntRQjga?dl=0"><i class="fa fa-dropbox"></i></a>
+<a href="https://www.dropbox.com/sh/a17b3xchllgy4j9/AAA4G9X0O5gAYg0MqqYIc8qva?dl=0"><i class="fa fa-dropbox"></i></a></p>
 </div>
 
-<!-- END MAIN -->
-</div>
-<h2><a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a> PLUS</h2>
-<!-- ////////////////////////////////////////////////////////// -->
- <iframe src="https://robodayblog.wordpress.com" height="400" width="100%"></iframe> 
-<!-- ////////////////////////////////////////////////////////// -->
+</div><!-- ////////////////////////////////////////////////////////// -->
 
-<hr>
-<!-- Footer --><footer class="w3-center w3-black w3-padding-16">
-<!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018
+<br><br><br>
 
+<!--Videos Section ////////////////////////////////////////////////////////// -->
+<div class="w3-center w3-black w3-padding-16">
+  <h1 class="w3-jumbo"><b>Videos</b></h1>
+  <!-- Main video --><p>
+<iframe id="YourID" name="video_feature" width="75%" height="400" src="https://www.youtube.com/embed/uVIjsjr_GVE" frameborder="0"></iframe>
+<!-- Other videos -->
+<br><a id="video_one" href="https://www.youtube.com/embed/uVIjsjr_GVE" target="video_feature">Michatron</a>
+<br><a id="video_two" href="https://www.youtube.com/embed/dwVID5os1g0" target="video_feature">ATMEGA 328</a>
+<br><a id="video_two" href="https://www.youtube.com/embed/takpmt5s5Ho" target="video_feature">PLC - Ταινία Μεταφοράς</a><br>
+<!-- END videos --></p>
+</div><!-- ////////////////////////////////////////////////////////// -->
 
-<script>
-filterSelection("all")
-function filterSelection(c) {
-  var x, i;
-  x = document.getElementsByClassName("column");
-  if (c == "all") c = "";
-  for (i = 0; i < x.length; i++) {
-    w3RemoveClass(x[i], "show");
-    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
-  }
-}
+<!--Footer Section ////////////////////////////////////////////////////////// -->
+<div class="w3-center w3-grey w3-padding-16">
+<a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a>
+<br><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018
+<!-- Signature --><br><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
+</div><!-- ////////////////////////////////////////////////////////// -->
 
-function w3AddClass(element, name) {
-  var i, arr1, arr2;
-  arr1 = element.className.split(" ");
-  arr2 = name.split(" ");
-  for (i = 0; i < arr2.length; i++) {
-    if (arr1.indexOf(arr2[i]) == -1) {element.className += " " + arr2[i];}
-  }
-}
-
-function w3RemoveClass(element, name) {
-  var i, arr1, arr2;
-  arr1 = element.className.split(" ");
-  arr2 = name.split(" ");
-  for (i = 0; i < arr2.length; i++) {
-    while (arr1.indexOf(arr2[i]) > -1) {
-      arr1.splice(arr1.indexOf(arr2[i]), 1);     
-    }
-  }
-  element.className = arr1.join(" ");
-}
-
-
-// Add active class to the current button (highlight it)
-var btnContainer = document.getElementById("myBtnContainer");
-var btns = btnContainer.getElementsByClassName("btn");
-for (var i = 0; i < btns.length; i++) {
-  btns[i].addEventListener("click", function(){
-    var current = document.getElementsByClassName("active");
-    current[0].className = current[0].className.replace(" active", "");
-    this.className += " active";
-  });
-}
-</script>
+<!--menu links Section ////////////////////////////////////////////////////////// -->
+<div class="w3-center w3-black"> ABOUT | PORTFOLIO | BLOG | LINKS | CV 
+</div><!-- ////////////////////////////////////////////////////////// -->
 
 </body>
-</html>
+</html> 
+<!--
+Contact: a-papaspyrou@outlook.com.gr
+Mob: 00306949452023
+Sub: papaspyrou.alexandros@gmail.com
+Support: alexispapy@gmail.com
+Support: alexispapy@outlook.com
+-->
