--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- INDEX_18Jun2018  -->
+<!-- INDEX _26Jun2018_  -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -35,7 +35,7 @@ body, html {
 </style>
 <body>
 <!--  ////////////////////////// QR  ////////////////////////// -->
-<style> #overlay {   position: fixed;     display: none;   width: 100%;     height: 100%;   top: 0;     left: 0;     right: 0;   bottom: 0;     background-color: rgba(0,0,0,0.9);   z-index: 2;     cursor: pointer;} #text{   position: absolute;    top: 50%;     left: 50%;    font-size: 20px;     color: white;    transform: translate(-50%,-50%);    -ms-transform: translate(-50%,-50%);} </style> <!-- <body onload="on()"> -->  <div id="overlay" onclick="off()"><div id="text"> <center><h3>scan & download the app</h3><img src="https://d2wuvg8krwnvon.cloudfront.net/appqrcode/mobile_9a986a9e031f.png" width="50%" height="50%"><p>or click anywhere to close this window</p> </center></div></div> <script>function on() {document.getElementById("overlay").style.display = "block";} function off() {document.getElementById("overlay").style.display = "none";}</script></body>
+<style> #overlay {   position: fixed;     display: none;   width: 100%;     height: 100%;   top: 0;     left: 0;     right: 0;   bottom: 0;     background-color: rgba(0,0,0,0.9);   z-index: 2;     cursor: pointer;} #text{   position: absolute;    top: 50%;     left: 50%;    font-size: 20px;     color: white;    transform: translate(-50%,-50%);    -ms-transform: translate(-50%,-50%);} </style> <!-- <body onload="on()"> -->  <div id="overlay" onclick="off()"><div id="text"> <center><h3>scan & download the app</h3><img src="https://d2wuvg8krwnvon.cloudfront.net/appqrcode/mobile_9a986a9e031f.png" width="50%" height="50%"><p>or click anywhere to close this window</p> </center></div></div> <script>function on() {document.getElementById("overlay").style.display = "block";} function off() {document.getElementById("overlay").style.display = "none";}</script>
 <!--  ////////////////////////// QR  ////////////////////////// -->
 
 
@@ -50,16 +50,27 @@ body, html {
     <a class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off"  onclick="on()">
     <i class="fa fa-android"></i> NEW APP</a></p>
     
-<span class="w3-tag w3-blue w3-hide-small"><a href="https://alexandroshub.github.io/about" style="text-decoration: none"><i class="fa fa-info-circle"></i></a></span>  <span class="w3-tag w3-red w3-margin-bottom"><a href="https://alexandroshub.github.io/support.html" style="text-decoration: none"><i class="fa fa-support"></i></a></span>
-  <span class="w3-tag w3-green w3-margin-bottom"><a style="text-decoration: none" onclick="on()"><i class="fa fa-android"></i></a></span> <span class="w3-tag w3-orange w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none"><i class="fa fa-rss"></i></a></span> <span class="w3-tag w3-black  w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none"><i class="fa fa-user-circle-o"></i></a></span> <span class="w3-tag w3-white w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none"><i class="fa fa-folder-open-o"></i></a></span>  
-<span class="w3-tag w3-purple w3-margin-bottom"><a href="https://alexandroshub.github.io/links.html" style="text-decoration: none"><i class="fa fa-external-link"></i></a></span> 
- 
+<span class="w3-tag w3-blue w3-hide-small"><a href="https://alexandroshub.github.io/about" style="text-decoration: none" title="About my Website"><i class="fa fa-info-circle"></i></a></span>  
+
+<span class="w3-tag w3-red w3-margin-bottom"><a href="https://alexandroshub.github.io/support.html" style="text-decoration: none"><i class="fa fa-support"></i></a></span>
+
+<span class="w3-tag w3-green w3-margin-bottom"><a style="text-decoration: none" onclick="on()"><i class="fa fa-android"></i></a></span>
+
+<span class="w3-tag w3-orange w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none"title="Check out my Blog"><i class="fa fa-rss"></i></a></span> 
+
+<span class="w3-tag w3-black  w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none" title="Check out my CV"><i class="fa fa-user-circle-o"></i></a></span> 
+
+<span class="w3-tag w3-white w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none" title="Check out my portfolio"><i class="fa fa-folder-open-o"></i></a></span>
+
+<span class="w3-tag w3-purple w3-margin-bottom"><a href="https://alexandroshub.github.io/links.html" style="text-decoration: none" title="Check out more Links"><i class="fa fa-external-link"></i></a></span> 
+
   </div> 
   <span class="w3-hide-small">
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
 <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter"></i></a>
-<!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin"></i></a>
-<!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" ></i></a> | 
+<!-- linkedin -->
+<a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="linkedin"><i class="fa fa-linkedin"></i></a>
+<!-- github --><a href="https://github.com/alexandroshub"><i class="fa fa-github-alt" ></i></a> | 
 <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
 </div></span>
 </header>
@@ -143,5 +154,10 @@ function w3_close() {mySidebar.style.display = "none";}
 </script>
 </body>
 </html>
-<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023  |  Sub: papaspyrou.alexandros@gmail.com -->
-<!-- Support: alexispapy@gmail.com  |    alexispapy@outlook.com  -->
+<!--
+Contact: a-papaspyrou@outlook.com.gr
+Mob: 00306949452023
+Sub: papaspyrou.alexandros@gmail.com
+Support: alexispapy@gmail.com
+Support: alexispapy@outlook.com
+-->
