--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,11 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 </style>
 <body>
+<!-- BAR Section //////////////////////////////////////////////////////////-->
+<div class="w3-bar w3-dark-grey  w3-large ">
+<a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-padding-large"><i class="fa fa-home w3-margin-right"></i>Home</a>
+<a href="https://www.dropbox.com/sh/a17b3xchllgy4j9/AAA4G9X0O5gAYg0MqqYIc8qva?dl=0" class="w3-bar-item w3-button w3-padding-large w3-right"><i class="fa fa-dropbox w3-margin-right" ></i>Files</a>
+</div><!-- ////////////////////////////////////////////////////////// -->
 
 <!-- MAIN Section //////////////////////////////////////////////////////////-->
 <div class="w3-center w3-dark-grey w3-padding-16">
