--- a/about.html
+++ b/about.html
@@ -1,32 +1,43 @@
+<!-- ABOUT _26Jun2018_  -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ By: Alexandros Papaspyrou -->
-
+Handcrafted With ❤ By: Alexandros Papaspyrou
+-->
 <!DOCTYPE html> 
 <html>
-<title>Papaspyrou Alexandros</title>
-<link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
+<title>Papaspyrou</title>
+<link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link href='https://fonts.googleapis.com/css?family=RobotoDraft' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<style>
 html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 .w3-bar-block .w3-bar-item {padding: 16px}
 </style>
 <body>
-<a class="w3-button w3-red" href="https://alexandroshub.github.io/index"><b>ENTER<i class="w3-margin-left fa fa-sign-in"></i></b></a>
+<!-- BAR Section //////////////////////////////////////////////////////////-->
+<div class="w3-bar w3-dark-grey  w3-large ">
+<a class="w3-bar-item  w3-green">BETA</a>
+<a class="w3-bar-item"><i class="fa fa-clock-o"></i> Last Update: 26/6/2018</a>
+<a href="https://alexandroshub.github.io/index" class="w3-red w3-bar-item w3-button  w3-right"><i class="fa fa-sign-in w3-margin-right" ></i><b>ENTER</b></a>
+</div><!-- ////////////////////////////////////////////////////////// -->
+
+
 <div id="about" class="w3-container person">
   <br>
-  <img class="w3-round  w3-animate-top" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
+  <img class="w3-round" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
   <h5 class="w3-opacity">Welcome in my personal website <br>100% HTML Hosted by Github<br> Handcrafted With ❤ By: Alexandros Papaspyrou</h5>
   
-<hr><h4><i class="fa fa-clock-o"></i> Last Update: 25/4/2018 <br> Alpha Stage </h4>
+<hr>
 Hi, I’m Alexandros. I’m a student living in Athens. <br>  I am a fan of automation, computers, and technology.  <br> I’m also interested in volunteering and DIY.
 <hr></div>
 
