--- a/links.html
+++ b/links.html
@@ -1,3 +1,4 @@
+
 <!-- LINKS_18Jun2018  -->
 
 <!--
@@ -16,14 +17,17 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>body { background-color: #f1f1f1; padding: 20px; font-family: Arial;}</style>
+<style>body { background-color: #f1f1f1; font-family: Arial;}</style>
+
 <body>
+<!-- ================================================================ -->
+<div class="w3-bar w3-dark-grey w3-left-align w3-large">
+<a class="w3-bar-item w3-light-grey"  href="https://alexandroshub.github.io/index"><img src= "https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:35px;"></a> 
+<a class="w3-bar-item  w3-black w3-padding-large"><b>Links</b></a>   
+</div><!-- ================================================================ -->
 
-<div class="main">
+<div class="main"><!-- ================================================================ -->
 
-<h2><a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a> Links</h2>
-
- <!--  ================================================================  -->
 <br><span class="w3-tag w3-black">EVENTS</span><span class="w3-tag w3-blue"><a href=" https://www.e-businessworld.gr ">e-Business & Social Media World 2018</a></span><br>  
 		<a href="http://www.sev.org.gr">sev</a> | 
 		<a href="https://www.meetup.com">meetup</a> | 
