--- a/links.html
+++ b/links.html
@@ -1,5 +1,4 @@
-
-<!-- LINKS_18Jun2018  -->
+<!-- LINKS_ 26Jun2018  -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -21,7 +20,7 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 
 <body>
 <!-- ================================================================ -->
-<div class="w3-bar w3-dark-grey w3-left-align w3-large">
+<div class="w3-bar w3-left-align w3-large">
 <a class="w3-bar-item w3-light-grey"  href="https://alexandroshub.github.io/index"><img src= "https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:35px;"></a> 
 <a class="w3-bar-item  w3-black w3-padding-large"><b>Links</b></a>   
 </div><!-- ================================================================ -->
