--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- INDEX _3Jul2018_  -->
-<!-- WHAT'S NEW: mesenger chat -->
+<!-- WHAT'S NEW: mesenger chat 2 -->
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -52,7 +52,7 @@ body, html {
   theme_color="#A9A9A9"
   logged_in_greeting="Hi! How can i help you?"
   logged_out_greeting="Hi! How can i help you?">
-</div>    
+</div>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
     
 <!--  ////////////////////////// QR  ////////////////////////// -->
