--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,4 @@
-<!-- Portfolio _26Jun2018_  -->
-
+<!-- Portfolio _9Jul 2018_  -->
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -21,6 +20,26 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 </style>
 <body>
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="1610585155641169"
+  theme_color="#A9A9A9"
+  logged_in_greeting="Hi! How can i help you?"
+  logged_out_greeting="Hi! How can i help you?">
+</div>
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
+
+
 <!-- BAR Section //////////////////////////////////////////////////////////-->
 <div class="w3-bar w3-dark-grey  w3-large ">
 <a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-padding-large"><i class="fa fa-home w3-margin-right"></i>Home</a>
@@ -75,7 +94,15 @@ Files & Publications</div>
 <!--BLOG Section ////////////////////////////////////////////////////////// -->
 <div class="w3-center w3-grey w3-padding-16">
 <h1 class="w3-jumbo"><b>Blog</b></h1>
-<iframe src="https://robodayblog.wordpress.com" height="400" width="75%"></iframe></div><!-- ////////////////////////////////////////////////////////// -->
+<iframe src="https://robodayblog.wordpress.com" height="400" width="75%"></iframe>
+<br><span class="w3-tag w3-small w3-blag"><a id="video_two" href="https://www.youtube.com/embed/fkQYsenF0og" target="video_feature"><b> PLUS
+</b></a></span>
+<span class="w3-tag w3-small w3-blag"><a id="video_two" href="https://www.youtube.com/embed/fkQYsenF0og" target="video_feature"><b> BLOG
+</b></a></span>
+<span class="w3-tag w3-small w3-blag"><a id="video_two" href="https://www.youtube.com/embed/fkQYsenF0og" target="video_feature"><b> NEXT
+</b></a></span>
+</div>
+<!-- ////////////////////////////////////////////////////////// -->
 
 <!--NUM Section ////////////////////////////////////////////////////////// -->
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
@@ -143,9 +170,22 @@ Files & Publications</div>
   <!-- Main video --><p>
 <iframe id="YourID" name="video_feature" width="75%" height="400" src="https://www.youtube.com/embed/uVIjsjr_GVE" frameborder="0"></iframe>
 <!-- Other videos -->
-<br><a id="video_one" href="https://www.youtube.com/embed/uVIjsjr_GVE" target="video_feature">Michatron</a>
-<br><a id="video_two" href="https://www.youtube.com/embed/dwVID5os1g0" target="video_feature">ATMEGA 328</a>
-<br><a id="video_two" href="https://www.youtube.com/embed/takpmt5s5Ho" target="video_feature">PLC - Ταινία Μεταφοράς</a><br>
+<br>
+<span class="w3-tag w3-small w3-light-gray"><a id="video_two" href="https://www.youtube.com/embed/fkQYsenF0og" target="video_feature"><b> LDR switch
+</b></a></span>
+<span class="w3-tag w3-small w3-gray"><a id="video_two" href="https://www.youtube.com/embed/KKg15xo4_SA" target="video_feature"><b> W3 University  </b></a></span>
+	<span class="w3-tag w3-small w3-light-grey"><a id="video_two" href="https://www.youtube.com/embed/8h8Oq1GO-1o" target="video_feature"><b> LabView LoggerIV Project </b></a></span>
+	<span class="w3-tag w3-small w3-gray"> 
+<a id="video_one" href="https://www.youtube.com/embed/uVIjsjr_GVE" target="video_feature"><b>Michatron</b></a></span>
+	<span class="w3-tag w3-small w3-light-grey"> 
+<a id="video_two" href="https://www.youtube.com/embed/dwVID5os1g0" target="video_feature"><b>ATMEGA 328</b></a></span>
+	<span class="w3-tag w3-small w3-gray"> 
+<a id="video_two" href="https://www.youtube.com/embed/takpmt5s5Ho" target="video_feature"><b>PLC - Ταινία Μεταφοράς</b></a></span>
+     
+
+
+
+<br>
 <!-- END videos --></p>
 </div><!-- ////////////////////////////////////////////////////////// -->
 
