--- a/python.html
+++ b/python.html
@@ -75,8 +75,8 @@ body, html {
   </div>
   <div class="w3-display-middle w3-center">
 
-	<span class="w3-text-white w3-hide-small" style="font-size:130px">#python</span>
-    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">#python</span>
+	<span class="w3-text-white w3-hide-small" style="font-size:130px">#python </span>
+    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">#python </span>
 
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
@@ -90,15 +90,15 @@ body, html {
 <!-- About Container -->
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
-   <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">AUTOMATION</span></h5>
-    <p>Αυτοματισμός, είναι το πεδίο της επιστήμης και της τεχνολογίας που ασχολείται με την επιβολή επιθυμητής συμπεριφοράς στα φαινόμενα και με την κατανόηση των μηχανισμών μέσω των οποίων καθορίζεται η λειτουργία ενός φαινομένου. Αυτοματισμός ονομάζεται και Επιστήμη του Ελέγχου. <hr>
-Το αντικείμενο του Αυτοματισμού, είναι γενικό και πολύπλευρο, για αυτό και εφαρμογές του βρίσκονται πολυάριθμες στην καθημερινή ζωή και στη βιομηχανία. Ο Αυτοματισμός είναι ένα από τα πιο “ιστορικά” πεδία της επιστήμης, διότι η ανάπτυξή του συνοδεύει την εξέλιξη όλων των άλλων τεχνολογιών. Η γνώση του Αυτοματισμού, επομένως, αποτελεί γνώση της “τεχνολογικής ιστορίας” μας και της κληρονομιάς μας. Στην περίπτωση του Αυτοματισμού, μάλιστα, η ιστορία αυτή είναι ιδιαίτερα πλούσια μιας και οι Αρχαίοι Έλληνες επέδειξαν ιδιαίτερη εφευρετικότητα και ανέπτυξαν πολλές και σημαντικές λύσεις αυτοματισμού, που χρησιμοποιούμε μέχρι και σήμερα. Χάρη στην καθολική και γενικευμένη διάδοση των εφαρμογών του, ο Αυτοματισμός αποκτά ένα σημαντικό ρόλο στη ζωή μας.</p>
+   <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">INTRO
+   </span></h5>
+    <p>Η Python είναι μια δυναμική αντικειμενοστραφής γλώσσα προγραμματισμού που μπορεί να χρησιμοποιηθεί για πολλά είδη ανάπτυξης λογισμικού. Προσφέρει ισχυρή υποστήριξη για ενσωμάτωση με άλλες γλώσσες και εργαλεία, και διαθέτει μία πλούσια γκάμα βιβλιοθηκών.</p>
     
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">WELCOME</span></h5>
-    <p>Καλώς ήλθατε στο κόσμο τον ηλεκτρονικών και των αυτοματισμών! Ζούμε σε μια εποχή εκπληκτικά υψηλής τεχνολογίας, που περιβάλλεται από ηλεκτρονικά μαραφέτια και gadgets. Η κατανόηση του πώς να διαβάσει σχηματικές αναπαραστάσεις, συγκόλλησης, το πρόγραμμα και την κατασκευή κυκλωμάτων θα σας βοηθήσει να κατανοήσετε του κόσμου στον οποίο ζούμε…  Μέσα από αυτή την ενότητα θέλω να σας βοηθήσω να γνωρίσετε και να αγαπήσετε τον κόσμο των ηλεκτρονικών. Τα Tutorials θα σας εξηγούν, διδάσκουν, και θα σας εμπνέουν στο να παίξετε και να ψαχτείτε με τα ηλεκτρονικά και τους αυτοματισμούς! Θα έχουμε ένα ευρύ φάσμα από tutorials που θα καλύπτουν τόσο τη βασική θεωρία των ηλεκτρονικών και παραδείγματα για την κατασκευή project.</p>
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">HISTORY</span></h5>
+    <p>Η Python δημιουργήθηκε από τον Ολλανδό Γκβίντο βαν Ρόσσουμ (Guido van Rossum) το 1990. Ο κύριος στόχος της είναι η αναγνωσιμότητα του κώδικά της και η ευκολία χρήσης της και το συντακτικό της επιτρέπει στους προγραμματιστές να εκφράσουν έννοιες σε λιγότερες γραμμές κώδικα απ'ότι θα ήταν δυνατόν σε γλώσσες όπως η C++ ή η Java. Διακρίνεται λόγω του ότι έχει πολλές βιβλιοθήκες που διευκολύνουν ιδιαίτερα αρκετές συνηθισμένες εργασίες και για την ταχύτητα εκμάθησης της.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
-      <p>Chef, Coffeeist and Owner: Liam Brown</p>
+    <h5 class="w3-center w3-padding-12"><span class="w3-tag w3-wide">NOTE</span></h5>
+      <p><i>Το βιβλίο  <a href="http://dide.flo.sch.gr/Plinet/Meetings/Meeting23/A_Byte_of_Python-el.pdf">«A Byte of Python»</a> μεταφρασμένο στα ελληνικά και το βιβλίο του Δημήτρη Λεβεντέα <a href="http://python.org.gr/index.php/files/file/9-python">«Οδηγός Python Μέσω Παραδειγμάτων»</a> όπου μπορείτε να τα κατεβάσετε σε PDF.</i></p>
     </div>
     <img src="https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
