--- a/cpp.html
+++ b/cpp.html
@@ -23,7 +23,7 @@ body, html {
 .bgimg {
     background-position: center;
     background-size: cover;
-    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    background-image: url("https://clsimplex.com/images/releases/headers/quality-code.jpg");
     min-height: 75%;
 }
 .menu {
