--- a/arduino.html
+++ b/arduino.html
@@ -169,8 +169,16 @@ body, html {
 <!-- End page content -->
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16 w3-large">
-<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
+<!-- top --> 
+<a href="#" class="w3-button"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Go To Top</a>
+<br>
+<!-- twitter --><a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:15px;color:white"></i></a>
+<!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:15px;color:white"></i></a>
+<!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a> | 
+<!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018
+<br><!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
 </footer>
+
 
 <script> // Tabbed Menu
 function openMenu(evt, menuName) {
